--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -19,10 +19,10 @@
     align-content: center;
     justify-content: center;
   }
-  .container{
+  .container {
     height: 599px;
   }
-  pre{
+  pre {
     display: block;
     color: #ffffff;
     font: unset;
@@ -67,8 +67,7 @@ information om hur du kommer i kontakt med oss.
               
 Är du anställd i Casator så loggar du in här nedanför.
 Användarnamn och lösenord får du av din verksamhetschef.
-            </pre
-              >
+            </pre>
               <h3 class="text-center text-info">Logga in</h3>
               <div class="form-group">
                 <label class="text-info" for="username">Användarnamn:</label
@@ -89,12 +88,10 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
-                {% if messages %}
-                  {% for message in messages %}
-                      <p id="messages">{{message}}</p>
-                  {% endfor %}
-                {% endif %}
-                
+                {% for message in messages %}
+                <div class="alert alert-dark" role="alert">{{message}}</div>
+                {% endfor %}
+
                 <input
                   class="btn btn-info btn-md"
                   name="submit"
