--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -88,7 +88,7 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
-
+                <p>{{form.errors}}</p>
                 <input
                   class="btn btn-info btn-md"
                   name="submit"
@@ -97,7 +97,6 @@ Användarnamn och lösenord får du av din verksamhetschef.
                 />
               </div>
             </form>
-            <p>{{messages.info}}</p>
           </div>
         </div>
       </div>
