--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -88,7 +88,7 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
-                  {{message}}
+                  {{messages}}
                 <input
                   class="btn btn-info btn-md"
                   name="submit"
