--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -88,7 +88,9 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
-                  {{messages}}
+                {% for message in messages%}
+                <p id="messages">{{message}}</p>
+                {% endfor%}
                 <input
                   class="btn btn-info btn-md"
                   name="submit"
